# interpreter_c

./: CMakeLists.txt  execute.sh
include/lexer/: errors.h  kind.h  lexer.h  token.h  utils.h
include/memory/: arena_allocator.h
include/parser/: errors.h  expr.h  helpers.h  parser.h
include/parser/types/: string.h
include/utils/: binary_search.h  hashmap.h  source_map.h  str_view.h  vector.h
src/: CMakeLists.txt  main.c
src/lexer/: CMakeLists.txt  errors.c  kind.c  lexer.c  token.c  utils.c
src/memory/: CMakeLists.txt  arena_allocator.c
src/parser/: CMakeLists.txt  expr.c  helpers.c  parser.c
src/parser/types/: string.c
src/tests/: CMakeLists.txt
src/tests/lexer/: CMakeLists.txt  test_lexer.c  test_token.c
src/tests/memory/: CMakeLists.txt  memory_arena.c
src/tests/parser/: CMakeLists.txt  string_test.c
src/tests/utils/: CMakeLists.txt  test_hashmap.c  test_vector.c
src/utils/: CMakeLists.txt  binary_search.c  hashmap.c  source_map.c  str_view.c  vector.c
tests/: test1.txt  test2.txt
